--- a/Film-MVC/package.json
+++ b/Film-MVC/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
+    "mongoose-delete": "^0.5.3",
     "mongoose-slug-generator": "^1.0.4",
     "mongoose-timestamp": "^0.6.0"
   }
